# graph_exploration

./: CMakeLists.txt  README.md
data/: Graph_Random_11251.graph  Graph_Random_5659.graph
data/DRAGON/: DRAGON1.graph  DRAGON2.graph  DRAGON3.graph
data/FIREFLY/: FIREFLY1.graph  FIREFLY2.graph  FIREFLY3.graph
data/ILLINOIS/: ILLINOIS2.graph  ILLINOIS3.graph
data/MESI/: MESI1.graph  MESI2.graph  MESI3.graph
data/MOESI/: MOESI2.graph  MOESI3.graph
data/PRODUCER-CONSUMMER/: PRODUCER-CONSUMMER10.graph  PRODUCER-CONSUMMER11.graph  PRODUCER-CONSUMMER12.graph  PRODUCER-CONSUMMER13.graph  PRODUCER-CONSUMMER14.graph  PRODUCER-CONSUMMER15.graph  PRODUCER-CONSUMMER16.graph  PRODUCER-CONSUMMER2.graph  PRODUCER-CONSUMMER3.graph  PRODUCER-CONSUMMER4.graph  PRODUCER-CONSUMMER5.graph  PRODUCER-CONSUMMER6.graph  PRODUCER-CONSUMMER7.graph  PRODUCER-CONSUMMER8.graph
data/SYNAPSE/: SYNAPSE2.graph  SYNAPSE3.graph
data/barber/: barber1.graph
data/berkeley/: berkeley1.graph  berkeley2.graph  berkeley3.graph  berkeley4.graph  berkeley5.graph
data/centralserver/: centralserver1.graph  centralserver2.graph  centralserver3.graph
data/consistency/: consistency1.graph  consistency2.graph  consistency3.graph
data/consprodjava/: consprodjava2.graph
data/consprodjavaN/: consprodjavaN2.graph  consprodjavaN3.graph
data/csm/: csm1.graph  csm2.graph  csm3.graph
data/dekker/: dekker1.graph
data/efm/: efm3.graph
data/fms/: fms1.graph  fms2.graph  fms3.graph  fms4.graph
data/futurbus/: futurbus1.graph  futurbus2.graph  futurbus3.graph
script/: all_experiments.sh
(+45 files in other folders)
